--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,5 +21,19 @@
  h1,h2,h3 {
 
      font-family: 'ZCOOL QingKe HuangYou', cursive;
-
+     color: #f5f6fa;
  }
+ 
+ body {
+    
+   background-color: #2d3436;
+   
+    
+ 
+   }
+   
+   .navbar {
+    border: none; 
+    background-color: #4cd137;
+   }
+    
