--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
-<h1> New Website for Ruby</h1>
+
+<div class= "home_callout text-center">
+
+    <h1> Welcome to NAFIS made with Ruby</h1>
+    <h3> NAFIS Fansite</h3>
+
+</div>
